--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -3,8 +3,30 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+.text-primary {
+    color: #FD6E0A;
+}
+
+.btn-primary {
+    border: 0;
+    background: #FD6E0A;
+    border-radius: 5px;
+    height: 64px;
+    padding: 18px 35px;
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 20px;
+
+}
 
 /* header and nav style */
+.header {
+    background: #FFF8F3;
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -14,6 +36,7 @@ nav {
 
 nav ul {
     display: flex;
+    align-items: center;
 }
 
 nav li {
@@ -25,6 +48,59 @@ nav li {
     font-weight: 800;
     font-size: 45px;
 }
-.text-primary {
-    color: #FD6E0A;
+
+/* banner style */
+.banner {
+    margin: 0 200px;
+    align-items: center;
+    display: flex;
+}
+
+.banner-sub-title {
+    font-weight: 600;
+    font-size: 45px;
+    margin-bottom: 5px;
+}
+
+.banner-title {
+    font-weight: 700;
+    font-size: 85px;
+    margin-bottom: 20px;
+}
+
+.banner-discription {
+    color: #757575;
+
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+/* main section */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+
+
+/* about section style */
+.about {
+    text-align: center;
+    margin-top: 131px;
+    background: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px 150px;
+}
+
+.section-title {
+    
+    margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.section-description {
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
 }
