--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -81,26 +81,85 @@ main {
     margin: 0 auto;
 }
 
+section{
+    margin-top: 130px;
+}
+
 
 
 /* about section style */
 .about {
     text-align: center;
-    margin-top: 131px;
+    margin-top: 130px;
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
 }
 
 .section-title {
-    
-    margin-bottom: 30px;
+
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
+    text-align: center;
 }
 
 .section-description {
     color: #757575;
     font-size: 18px;
     margin-bottom: 30px;
+}
+
+
+/* main er dev section style */
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about.info-title {
+
+    font-size: 20px;
+    font-weight: 400;
+    color: #757575;
+}
+
+.info-description {
+    color: #474747;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.what-i-do {
+    margin-top: 130px;
+   
+
+}
+
+.skill {
+    background:  #f1f0f0;
+    box-shadow: 0px 6px 50px rgba(7, 7, 7, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+    margin-top: 50px;
+}
+
+.skill-title {
+    color: #181818;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+
+.skill-discription {
+    font-size: 16px;
+    color: #757575;
+
 }
